discussion/kv_engine/179731/179731_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46740: Reduce branching in ActiveStream::nextCheckpointItemTask

Change-Id: Icc4e50a612f60af741169d0e60c7cdb865fda4f5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Paolo Cocchi
Date: 2022-09-08 12:31:58.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-09-08 12:38:42.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49136/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/49136/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19384/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/engines/ep/src/dcp/active_stream.cc b/engines/ep/src/dcp/active_stream.cc
index 816700131..e847139de 100644
--- a/engines/ep/src/dcp/active_stream.cc
+++ b/engines/ep/src/dcp/active_stream.cc
@@ -950,7 +950,7 @@ void ActiveStream::nextCheckpointItemTask(
     // MB-29369: only run the task&#39;s work if the stream is in an in-memory
     // phase (of which takeover is a variant).
     if (!(isInMemory() || isTakeoverSend())) {
-        return ;
+        return;
     }
 
     processItems(getOutstandingItems(*vbucket), streamMutex);

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/19384/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20163/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:18: error: non-const lvalue reference to type "ActiveStream::OutstandingItemsResult" cannot bind to a temporary of type "ActiveStream::OutstandingItemsResult" [clang-diagnostic-error]
    processItems(getOutstandingItems(*vbucket), streamMutex);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.h:485:47: note: passing argument to parameter "outstandingItemsResult" here
    void processItems(OutstandingItemsResult& outstandingItemsResult,
                                              ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20163/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:18:
error: non-const lvalue reference to type "ActiveStream::OutstandingItemsResult" cannot bind to a temporary of type "ActiveStream::OutstandingItemsResult" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/20163/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41300/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:18:
error: non-const lvalue reference to type "ActiveStream::OutstandingItemsResult" cannot bind to a temporary of type "ActiveStream::OutstandingItemsResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/41300/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9864/ : FAILURE

Compile error at [2022-09-08T12:33:17.015Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:18:
error: non-const lvalue reference to type "ActiveStream::OutstandingItemsResult" cannot bind to a temporary of type "ActiveStream::OutstandingItemsResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/9864/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9962/ : FAILURE

Compile error at [2022-09-08T12:35:19.198Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:37:
error: cannot bind non-const lvalue reference of type ?ActiveStream::OutstandingItemsResult&? to an rvalue of type ?ActiveStream::OutstandingItemsResult?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/9962/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22128/ : FAILURE

Compile error at [2022-09-08T12:34:43.839Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:37:
error: cannot bind non-const lvalue reference of type ?ActiveStream::OutstandingItemsResult&? to an rvalue of type ?ActiveStream::OutstandingItemsResult?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/22128/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30522/ : FAILURE

Compile error at [2022-09-08T12:33:50.814Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:18:
error: non-const lvalue reference to type "ActiveStream::OutstandingItemsResult" cannot bind to a temporary of type "ActiveStream::OutstandingItemsResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/30522/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22486/ : FAILURE

Compile error at [2022-09-08T12:34:46.004Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:37:
error: cannot bind non-const lvalue reference of type ?ActiveStream::OutstandingItemsResult&? to an rvalue of type ?ActiveStream::OutstandingItemsResult?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/22486/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21463/ : FAILURE

Compile error at [2022-09-08T12:36:58.734Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:18:
error: non-const lvalue reference to type "ActiveStream::OutstandingItemsResult" cannot bind to a temporary of type "ActiveStream::OutstandingItemsResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/21463/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23233/ : FAILURE

Compile error at [2022-09-08T12:33:15.167Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/active_stream.cc:956:18:
error: non-const lvalue reference to type "ActiveStream::OutstandingItemsResult" cannot bind to a temporary of type "ActiveStream::OutstandingItemsResult"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/23233/ )
----------------------------------------------------------------------------------------------------------------------
